# please

./: Cargo.toml  LICENSE.md  README.md  flake.nix  plan.md
.github/workflows/: build.yml
src/: api.rs  config.rs  main.rs  ui.rs
