[package]
name = "please"
version = "0.1.0"
edition = "2024"

[dependencies]
xdg = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
json5 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rustyline = "14.0"
anyhow = "1.0"
shellexpand = "3.0"
colored = "3.0.0"
termios = "0.3.3"
regex = "1.12.2"
